nested/chef-nodes.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSettings": {
            "type": "secureObject"
        },
        "computeSettings": {
            "type": "secureObject"
        },
        "nodesSubnetRef": {
            "type": "string"
        },
        "nodeSetupUrl": {
            "type": "string"
        }
    },
    "variables": {},
    "resources": [
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('networkSettings').chefwsNodePip]",
            "location": "[parameters('networkSettings').location]",
            "properties": {
                "publicIPAllocationMethod": "[parameters('networkSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('networkSettings').chefwsNodeDns)]"
                }
            }
        },
        {
            "name": "[parameters('networkSettings').wsNodeNsg]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "location": "[parameters('networkSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "winrm",
                        "properties": {
                            "priority": 102,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5985",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkSettings').chefwsNodeNic]",
            "location": "[parameters('networkSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/',parameters('networkSettings').chefwsNodePip)]",
                "[concat('Microsoft.Network/networkSecurityGroups/',parameters('networkSettings').wsNodeNsg)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('networkSettings').chefwsNodePip)]"
                            },
                            "subnet": {
                                "id": "[parameters('nodesSubnetRef')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSettings').wsNodeNsg)]"
                }
            }
        },
        {
            "apiVersion": "[parameters('computeSettings').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('computeSettings').ChefWSNodeComputerName]",
            "location": "[parameters('computeSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkSettings').chefwsNodeNic)]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('computeSettings').chefWSNodeVmSize]"
                },
                "osProfile": {
                    "computerName": "[parameters('computeSettings').ChefWSNodeComputerName]",
                    "adminUsername": "[parameters('computeSettings').wsAdminUsername]",
                    "adminPassword": "[parameters('computeSettings').wsAdminPassword]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('computeSettings').imagePublisherWindows]",
                        "offer": "[parameters('computeSettings').imageOfferWindows]",
                        "sku": "[parameters('computeSettings').windowsOSVersion]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('computeSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": [
                        {
                            "name": "[concat(parameters('computeSettings').managedDiskName,'8')]",
                            "lun": 0,
                            "caching": "None",
                            "createOption": "Attach",
                            "managedDisk": {
                                "id": "[resourceId('Microsoft.Compute/disks',concat(parameters('computeSettings').managedDiskName,'8'))]"
                            }
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('computeSettings').chefwsNodeNic)]"
                        }
                    ]
                }
            }
        },
        {
            "name": "[concat(parameters('computeSettings').ChefWSNodeComputerName,'/nodesetup')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('computeSettings').location]",
            "apiVersion": "2016-04-30-preview",
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('nodeSetupUrl')]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "powershell -ExecutionPolicy Unrestricted -File nodesetup.ps1"
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('computeSettings').ChefWSNodeComputerName)]"
            ]
        },
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(parameters('networkSettings').chefEnvNodePip,'0')]",
            "location": "[parameters('networkSettings').location]",
            "properties": {
                "publicIPAllocationMethod": "[parameters('networkSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('networkSettings').chefenvNodeDns,'0')]"
                }
            }
        },
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(parameters('networkSettings').chefEnvNodePip,'1')]",
            "location": "[parameters('networkSettings').location]",
            "properties": {
                "publicIPAllocationMethod": "[parameters('networkSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('networkSettings').chefenvNodeDns,'1')]"
                }
            }
        },
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(parameters('networkSettings').chefEnvNodePip,'2')]",
            "location": "[parameters('networkSettings').location]",
            "properties": {
                "publicIPAllocationMethod": "[parameters('networkSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('networkSettings').chefenvNodeDns,'2')]"
                }
            }
        },
        {
            "name": "[concat(parameters('networkSettings').envNodeNsg,copyindex())]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "location": "[parameters('networkSettings').location]",
            "copy": {
                "name": "foo",
                "count": "[parameters('networkSettings').linuxvmcount]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-ssh-admin",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[parameters('networkSettings').networkApiVersion]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('networkSettings').chefenvNodesNic,copyindex())]",
            "location": "[parameters('networkSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('networkSettings').chefEnvNodePip,copyindex())]",
                "[concat('Microsoft.Network/networkSecurityGroups/',parameters('networkSettings').envNodeNsg,copyindex())]"
            ],
            "copy": {
                "name": "foo",
                "count": "[parameters('networkSettings').linuxvmcount]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('networkSettings').chefEnvNodePip,copyindex()))]"
                            },
                            "subnet": {
                                "id": "[parameters('nodesSubnetRef')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSettings').envNodeNsg,copyindex()))]"
                }
            }
        },
        {
            "apiVersion": "[parameters('computeSettings').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(parameters('computeSettings').chefEnvNodesComputerName,copyindex())]",
            "location": "[parameters('computeSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkSettings').chefenvNodesNic,copyindex())]"
            ],
            "copy": {
                "name": "foo",
                "count": "[parameters('computeSettings').linuxvmcount]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('computeSettings').vmSizeChefEnvironmentNodes]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('computeSettings').chefEnvNodesComputerName,copyindex())]",
                    "adminUsername": "[parameters('computeSettings').nodesAdminUsername]",
                    "adminPassword": "[parameters('computeSettings').nodesAdminPassword]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('computeSettings').imagePublisherLinux]",
                        "offer": "[parameters('computeSettings').imageOfferLinux]",
                        "sku": "[parameters('computeSettings').ubuntuOSVersion]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('computeSettings').storageAccountType]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(parameters('networkSettings').chefenvNodesNic,copyindex()))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {
        "wsnodefqdn": {
            "type": "string",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('networkSettings').chefwsNodePip),'2015-06-15').dnsSettings.fqdn]"
        },
        "envnode0fqdn": {
            "type": "string",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',concat(parameters('networkSettings').chefEnvNodePip,'0')),'2015-06-15').dnsSettings.fqdn]"
        },
        "envnode1fqdn": {
            "type": "string",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',concat(parameters('networkSettings').chefEnvNodePip,'1')),'2015-06-15').dnsSettings.fqdn]"
        },
        "envnode2fqdn": {
            "type": "string",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',concat(parameters('networkSettings').chefEnvNodePip,'2')),'2015-06-15').dnsSettings.fqdn]"
        }
    }
}
